<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="adi.adiproject2.AddModFragment"
    android:background="@drawable/bg">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/viewBG">

        <EditText
            android:id="@+id/enterModName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mod_name"
            android:textSize="10pt" />


        <!--<EditText-->
        <!--android:id="@+id/enterModUrl"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="URL"-->
        <!--android:layout_below="@+id/enterModName"-->
        <!--android:textSize="10pt"/>-->

        <EditText
            android:id="@+id/enterModCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enterModName"
            android:hint="@string/category_hint"
            android:textSize="8pt"/>



        <EditText
            android:id="@+id/enterModEndorsements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/enterModCategory"
            android:hint="@string/endorsements_hint"
            android:textSize="8pt"/>

        <EditText
            android:id="@+id/enterModDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/enterModEndorsements"
            android:hint="@string/description_hint"
            android:textSize="8pt" />

        <Button
            android:id="@+id/finalizeMod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:text="@string/add_mod_button_final"
            android:contentDescription="@string/finalize_mod"/>

    </RelativeLayout>

</RelativeLayout>
